# urlshortener

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
templates/: index.html  index.html.jinja2  layout.html.jinja2  login.html.jinja2  url.html.jinja2
tests/: test_urlshortener.py
urlshortener/: __init__.py  client.py  clouddsclient.py  redisclient.py
urlshortener/client/: __init__.py  base.py  clouddsclient.py  inmemoryclient.py  redisclient.py  sqliteclient.py
urlshortener/user/: api.py  current_user.py  jwt.py  pwd.py  schema.py  users_db.py
web/: README.md  package-lock.json  package.json
web/public/: index.html
web/src/: App.js  Auth.js  index.js
web/src/components/: AppBar.js  LoginDialog.js
web/src/components/GenerateCode/: GenerateCode.js  GenerateCodeForm.js  index.js
